# gimp-mcp-pro

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.sh
gimp_plugin/: gimp_mcp_plugin.py
src/gimp_mcp_pro/: __init__.py  bridge.py  config.py  server.py
src/gimp_mcp_pro/models/: __init__.py  common.py  drawing.py  image.py  layer.py  selection.py
src/gimp_mcp_pro/prompts/: __init__.py  api_reference.md  best_practices.md  filter_catalog.md  iterative_workflow.md
src/gimp_mcp_pro/resources/: __init__.py
src/gimp_mcp_pro/tools/: __init__.py  color_tools.py  drawing_tools.py  filter_tools.py  history_tools.py  image_tools.py  inspect_tools.py  layer_tools.py  pdb_tools.py  selection_tools.py  transform_tools.py
src/gimp_mcp_pro/utils/: __init__.py  errors.py  gimp_constants.py  logging.py
tests/: __init__.py  test_bridge.py  test_phase2.py
tests/test_models/: test_common.py
