[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gimp-mcp-pro"
version = "0.1.0"
description = "Production-grade MCP server for GIMP 3.0+ — typed tools, reliable communication, AI-friendly workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "GIMP MCP Pro Contributors" },
]
keywords = ["gimp", "mcp", "image-editing", "ai", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.5",
]

[project.scripts]
gimp-mcp-pro = "gimp_mcp_pro.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gimp_mcp_pro"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
